# QtSerialPortTest

./: CMakeLists.txt  Font_zh_CN.ts  qml.qrc
.cache/clangd/index/: QWidgetRenderer.cpp.EDDAEC6D3F68E44E.idx  QWidgetRenderer.h.CBE586081AD6FBFE.idx  RS485.cpp.479C1D879D879F03.idx  RS485.h.1036DC6837D70A96.idx  UR5.cpp.F033FB59F61F7B7E.idx  UR5.h.A3227BE8ACEBE669.idx  camerathread.cpp.4EBE6870BE97AA4F.idx  camerathread.h.9018335052F48BA9.idx  d435i.cpp.ABA630B024E540E0.idx  d435i.h.C59E31797D64770B.idx  imagetransmission.cpp.B7BD2F37851A9259.idx  imagetransmission.h.AFA94A2FEFEB9FEC.idx  main.cpp.3861888B6B25EF77.idx  serialadapter.cpp.36BA1E0AAC569D08.idx  serialadapter.h.9BFCCD94FBB90249.idx  serialthread.cpp.DA40F0F8C2FE167F.idx  serialthread.h.57CE806D4CA4C05F.idx
include/: QWidgetRenderer.h  RS485.h  UR5.h  camerathread.h  d435i.h  imagetransmission.h  serialadapter.h  serialthread.h
src/: main.cpp
src/Components/: QWidgetRenderer.cpp  imagetransmission.cpp  serialadapter.cpp
src/Device/: RS485.cpp  UR5.cpp  d435i.cpp  serialthread.cpp
src/Interface/: serialadapter.cpp
src/Thread/: camerathread.cpp  serialthread.cpp
static/: main.qml
static/components/: BatteryPanel.qml  CandyButton.qml  HomeTabSceneSignal.qml  HoverPressButton.qml  NavigationBar.qml  RectangleProgressBar.qml  RowNavigationBar.qml  SlideSwitch.qml
static/pages/: CheckTab.qml  StorgeTab.qml  page1.qml  page2.qml  page3.qml  page4.qml
